--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'walle'
 
 android {
     compileSdkVersion 25
@@ -11,10 +12,23 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        pkg {
+            storeFile file("keystore/test.jks")
+            storePassword "qazwsx"
+            keyAlias "test"
+            keyPassword "qazwsx"
+            v2SigningEnabled true//是否启用APK Signature Scheme v2
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled false//minifyEnabled是否启用混淆
+            shrinkResources false//删除无效的Resource
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.pkg
         }
     }
 }
@@ -28,4 +42,16 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile 'com.meituan.android.walle:library:1.1.3'
+}
+
+walle {
+    // 指定渠道包的输出路径
+//    apkOutputFolder = new File("${project.buildDir}/outputs/channels");
+    apkOutputFolder = new File("D:/APK/MakeAPK")
+    // 定制渠道包的APK的文件名称
+    apkFileNameFormat = '${appName}-${packageName}-${channel}-${buildType}-v${versionName}-${versionCode}-${buildTime}.apk';
+    // 渠道配置文件
+    channelFile = new File("${project.getProjectDir()}/channel.txt")
 }
