--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MyApp"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -16,6 +17,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ButtonActivity"></activity>
+
+        <activity android:name=".RadarActivity"></activity>
+
+        <activity android:name=".ColorfullActivity"></activity>
+
+        <activity android:name=".ColorfullBackActivity"></activity>
+
     </application>
 
 </manifest>
