--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
 
     compile 'com.meituan.android.walle:library:1.1.3'
+
+    // 设置沉浸式状态栏
+    compile 'com.githang:status-bar-compat:0.2'
 }
 
 walle {
