--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zs.login.myvarioustest">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".application.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".application.MyApp"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity">
             <intent-filter>
@@ -19,21 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.ButtonActivity"></activity>
-
-        <activity android:name=".activity.RadarActivity"></activity>
-
-        <activity android:name=".activity.ColorfullActivity"></activity>
-
-        <activity android:name=".activity.ColorfullBackActivity"></activity>
-
-        <activity android:name=".activity.ItemActivity"></activity>
-
-        <activity android:name=".activity.WebViewActivity"></activity>
-
-        <activity android:name=".activity.ShowActivity"></activity>
-
+        <activity android:name=".activity.ButtonActivity" />
+        <activity android:name=".activity.RadarActivity" />
+        <activity android:name=".activity.ColorfullActivity" />
+        <activity android:name=".activity.ColorfullBackActivity" />
+        <activity android:name=".activity.ItemActivity" />
+        <activity android:name=".activity.WebViewActivity" />
+        <activity android:name=".activity.ShowActivity" />
+        <activity android:name=".activity.CountDownActivity"></activity>
     </application>
 
 </manifest>
