--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity android:name=".activity.ItemActivity" />
         <activity android:name=".activity.WebViewActivity" />
         <activity android:name=".activity.ShowActivity" />
-        <activity android:name=".activity.CountDownActivity"></activity>
+        <activity android:name=".activity.CountDownActivity" />
+        <activity android:name=".activity.RelativeActivity" />
+        <activity android:name=".activity.VoiceAnimActivity"></activity>
     </application>
 
 </manifest>
