--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "org.jetbrains.anko:anko-common:$anko_version"
@@ -55,7 +56,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.github.iwgang:countdownview:2.1.6'
     compile 'com.google.code.gson:gson:2.6.2'
-    testCompile 'junit:junit:4.12'
+    //图片
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
+
 }
 
 walle {
