--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:name=".activity.VideoActivity"
             android:configChanges="orientation|screenSize|keyboardHidden" />
         <activity android:name=".activity.DialogActivity" />
-        <activity android:name=".activity.SpanStringActivity"></activity>
+        <activity android:name=".activity.SpanStringActivity" />
+        <activity android:name=".activity.AnimActivity"></activity>
     </application>
 
 </manifest>
