--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,39 +49,16 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    /**
-     * 绑定数据
-     */
-    compile 'com.jakewharton:butterknife:7.0.1'
-    /**
-     * 美团批量打包
-     */
-    compile 'com.meituan.android.walle:library:1.1.3'
-    /**
-     * 状态栏
-     */
-    compile 'com.githang:status-bar-compat:0.2'
-    /**
-     * 图片
-     */
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    /**
-     * 倒计时
-     */
-    compile 'com.github.iwgang:countdownview:2.1.6'
-    /**
-     * Gson解析
-     */
-    compile 'com.google.code.gson:gson:2.6.2'
-    /**
-     * 背景大图移动view
-     */
-    compile 'com.flaviofaria:kenburnsview:1.0.7'
-    /**
-     * 视频
-     */
-    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'
+
+    compile 'com.jakewharton:butterknife:7.0.1'// 绑定数据
+    compile 'com.meituan.android.walle:library:1.1.3'// 美团批量打包
+    compile 'com.githang:status-bar-compat:0.2'// 状态栏
+    compile 'com.squareup.picasso:picasso:2.5.2'// 图片
+    compile 'com.github.bumptech.glide:glide:3.7.0'// 图片
+    compile 'com.github.iwgang:countdownview:2.1.6'// 倒计时
+    compile 'com.google.code.gson:gson:2.6.2'// Gson解析
+    compile 'com.flaviofaria:kenburnsview:1.0.7'// 背景大图移动view
+    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'// 视频
     testCompile 'junit:junit:4.12'
 }
 
