--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.zs.various"
         minSdkVersion 16
@@ -37,7 +37,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -45,20 +45,27 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "org.jetbrains.anko:anko-common:$anko_version"
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
-    compile 'com.jakewharton:butterknife:7.0.1'// 绑定数据
-    compile 'com.meituan.android.walle:library:1.1.3'// 美团批量打包
-    compile 'com.githang:status-bar-compat:0.2'// 状态栏
-    compile 'com.squareup.picasso:picasso:2.5.2'// 图片
-    compile 'com.github.bumptech.glide:glide:3.7.0'// 图片
-    compile 'com.github.iwgang:countdownview:2.1.6'// 倒计时
-    compile 'com.google.code.gson:gson:2.6.2'// Gson解析
-    compile 'com.flaviofaria:kenburnsview:1.0.7'// 背景大图移动view
-    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'// 视频
+//    compile 'com.jakewharton:butterknife:7.0.1'
+    // 绑定数据
+    compile 'com.meituan.android.walle:library:1.1.3'
+    // 美团批量打包
+    compile 'com.githang:status-bar-compat:0.2'
+    // 状态栏
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    // 图片
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    // 图片
+    compile 'com.github.iwgang:countdownview:2.1.6'
+    // 倒计时
+    compile 'com.google.code.gson:gson:2.6.2'
+    // Gson解析
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
+    // 背景大图移动view
+    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'
+    // 视频
     testCompile 'junit:junit:4.12'
 }
 
