--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-//    compile 'com.jakewharton:butterknife:7.0.1'
+    //    compile 'com.jakewharton:butterknife:7.0.1'
     // 绑定数据
     compile 'com.meituan.android.walle:library:1.1.3'
     // 美团批量打包
@@ -64,9 +64,10 @@ dependencies {
     // Gson解析
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     // 背景大图移动view
-    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'
+    //    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'
     // 视频
     testCompile 'junit:junit:4.12'
+    compile project(':jiaozivideoplayer')
 }
 
 walle {
