--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".activity.SpanStringActivity" />
         <activity android:name=".activity.AnimActivity" />
         <activity android:name=".activity.ReflexActivity"></activity>
+        <activity android:name=".activity.DatePickerActivity"></activity>
     </application>
 
 </manifest>
