--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     //    compile 'com.jakewharton:butterknife:7.0.1'
     // 绑定数据
-    compile 'com.meituan.android.walle:library:1.1.3'
+    compile "com.meituan.android.walle:library:$walle_version"
     // 美团批量打包
     compile 'com.githang:status-bar-compat:0.2'
     // 状态栏
