--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
 
+    ext.walle_version = '1.1.6'
     ext.kotlin_version = '1.2.10'
     ext.anko_version = '0.10.3'
     repositories {
@@ -9,8 +10,9 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.meituan.android.walle:plugin:1.1.3'
+        classpath "com.meituan.android.walle:plugin:$walle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
