--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,37 +37,37 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // Kotlin
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    compile "org.jetbrains.anko:anko-common:$anko_version"
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support:recyclerview-v7:27.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "org.jetbrains.anko:anko-common:$anko_version"
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     //    compile 'com.jakewharton:butterknife:7.0.1'
     // 绑定数据
-    compile "com.meituan.android.walle:library:$walle_version"
+    implementation "com.meituan.android.walle:library:$walle_version"
     // 美团批量打包
-    compile 'com.githang:status-bar-compat:0.2'
+    implementation 'com.githang:status-bar-compat:0.2'
     // 状态栏
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     // 图片
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     // 图片
-    compile 'com.github.iwgang:countdownview:2.1.6'
+    implementation 'com.github.iwgang:countdownview:2.1.6'
     // 倒计时
-    compile 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.google.code.gson:gson:2.6.2'
     // Gson解析
-    compile 'com.flaviofaria:kenburnsview:1.0.7'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
     // 背景大图移动view
     //    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'
     // 视频
-    testCompile 'junit:junit:4.12'
-    compile project(':jiaozivideoplayer')
+    testImplementation 'junit:junit:4.12'
+    implementation project(':jiaozivideoplayer')
 }
 
 walle {
