--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     // 视频
     testImplementation 'junit:junit:4.12'
     implementation project(':jiaozivideoplayer')
+
+    implementation 'com.android.support:cardview-v7:27.0.2'
 }
 
 walle {
