--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         </activity>
         <activity android:name=".activity.CXRecyclerViewActivity"/>
         <activity android:name=".activity.DrawerLayoutActivity"/>
+        <activity android:name=".activity.ConstraintLayoutActivity"/>
     </application>
 
 </manifest>
