--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     // 视频
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:27.0.2'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+
 }
 
 walle {
