--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
 
+    implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1325_43613_sharewithdownload_withoutGame_obfs_20180807_151115.jar')
+
+
 }
 
 walle {
