--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
+    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
@@ -55,6 +58,7 @@
         <activity android:name=".activity.CXRecyclerViewActivity"/>
         <activity android:name=".activity.DrawerLayoutActivity"/>
         <activity android:name=".activity.ConstraintLayoutActivity"/>
+        <activity android:name=".activity.OpenFileActivity"/>
     </application>
 
 </manifest>
