--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".activity.ConstraintLayoutActivity"/>
         <activity android:name=".activity.OpenFileActivity"/>
         <activity android:name=".activity.CoordinatorLayoutActivity"/>
+        <activity android:name=".activity.BehaviorActivity"/>
     </application>
 
 </manifest>
