--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".activity.OpenFileActivity"/>
         <activity android:name=".activity.CoordinatorLayoutActivity"/>
         <activity android:name=".activity.BehaviorActivity"/>
+        <activity android:name=".activity.SyncActivity"/>
     </application>
 
 </manifest>
