--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1325_43613_sharewithdownload_withoutGame_obfs_20180807_151115.jar')
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
 
 walle {
