--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
         <activity android:name=".activity.CoordinatorLayoutActivity"/>
         <activity android:name=".activity.BehaviorActivity"/>
         <activity android:name=".activity.SyncActivity"/>
+        <activity android:name=".activity.RxJavaActivity"/>
     </application>
 
 </manifest>
