--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name=".activity.BehaviorActivity"/>
         <activity android:name=".activity.SyncActivity"/>
         <activity android:name=".activity.RxJavaActivity"/>
+        <activity android:name=".activity.SortActivity"/>
     </application>
 
 </manifest>
