--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
         <activity android:name=".activity.RxJavaActivity"/>
         <activity android:name=".activity.SortActivity"/>
         <activity android:name=".activity.LeakCanaryActivity"/>
+        <activity android:name=".activity.TabLayoutActivity"/>
     </application>
 
 </manifest>
