--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".activity.SortActivity"/>
         <activity android:name=".activity.LeakCanaryActivity"/>
         <activity android:name=".activity.TabLayoutActivity"/>
+        <activity android:name=".activity.DispatchEventActivity"/>
     </application>
 
 </manifest>
