--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     // 图片
     implementation 'com.github.iwgang:countdownview:2.1.6'
     // 倒计时
+    implementation 'com.alibaba:fastjson:1.1.60.android'
     implementation 'com.google.code.gson:gson:2.6.2'
     // Gson解析
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
