--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,16 +50,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     //    compile 'com.jakewharton:butterknife:7.0.1'
     // 绑定数据
     implementation "com.meituan.android.walle:library:$walle_version"
     // 美团批量打包
-    implementation 'com.githang:status-bar-compat:0.2'
-    // 状态栏
     implementation 'com.squareup.picasso:picasso:2.5.2'
     // 图片
     implementation 'com.github.bumptech.glide:glide:3.7.0'
@@ -74,11 +73,14 @@ dependencies {
     //    compile 'fm.jiecao:jiecaovideoplayer:5.8.1'
     // 视频
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1325_43613_sharewithdownload_withoutGame_obfs_20180807_151115.jar')
     implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // 沉浸式状态栏
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    // 状态栏
+    implementation 'com.githang:status-bar-compat:0.2'
 }
 
 walle {
