--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     // 状态栏
     implementation 'com.githang:status-bar-compat:0.2'
 
-//    implementation 'com.github.QQzs:BorderView:1.0.0'
+    implementation 'com.github.QQzs:BorderView:1.0.3'
 }
 
 walle {
