--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".activity.RelativeActivity" />
         <activity android:name=".activity.VoiceAnimActivity" />
         <activity android:name=".activity.CustomViewActivity" />
+        <activity android:name=".activity.CustomView2Activity" />
         <activity android:name=".activity.UpdateActivity"/>
         <activity android:name=".activity.ContactActivity"
             android:windowSoftInputMode="adjustPan">
