--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,7 @@
         <activity android:name=".activity.NotificationActivity"/>
         <activity android:name=".activity.TabHomeActivity"/>
         <activity android:name=".activity.TabTitleActivity"/>
+        <activity android:name=".activity.ChoiceViewActivity"/>
 
         <receiver android:name=".receiver.CloseNoticeBroadcastReceiver"
             android:enabled="true"
