--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+// 工程编译过程中依赖的包，以及包的仓库
 buildscript {
 
     ext.walle_version = '1.1.6'
     ext.kotlin_version = '1.2.10'
     ext.anko_version = '0.10.3'
+
+    // 仓库
     repositories {
+        // 依次执行的
+        maven { url 'https://jitpack.io' }
         jcenter()
         google()
     }
+    // 依赖包
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.meituan.android.walle:plugin:1.1.3'
@@ -20,11 +26,12 @@ buildscript {
     }
 }
 
+// 所有的module编译过程中依赖的包，以及包的仓库
 allprojects {
     repositories {
+        maven { url 'https://jitpack.io' }
         jcenter()
         google()
-        maven { url 'https://jitpack.io' }
     }
 }
 
