--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".activity.LeakCanaryActivity"/>
         <activity android:name=".activity.TabLayoutActivity"/>
         <activity android:name=".activity.DispatchEventActivity"/>
+        <activity android:name=".activity.DispatchActivity"/>
         <activity android:name=".activity.ThreadPoolActivity"/>
         <activity android:name=".activity.NotificationActivity"/>
         <activity android:name=".activity.TabHomeActivity"/>
