--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     implementation 'com.githang:status-bar-compat:0.2'
 
     implementation 'com.github.QQzs:BorderView:1.0.6'
+    // 鲁班压缩
+    implementation 'top.zibin:Luban:1.1.8'
 }
 
 walle {
