--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
         <activity android:name=".activity.TestActivity"/>
         <activity android:name=".activity.ViewFlipperActivity"/>
         <activity android:name=".activity.ViewStubActivity"/>
+        <activity android:name=".activity.LocalBroadcastActivity"/>
 
         <receiver android:name=".receiver.CloseNoticeBroadcastReceiver"
             android:enabled="true"
