--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
         <activity android:name=".activity.ViewFlipperActivity"/>
         <activity android:name=".activity.ViewStubActivity"/>
         <activity android:name=".activity.LocalBroadcastActivity"/>
+        <activity android:name=".activity.SleepAndWaitActivity"/>
 
         <receiver android:name=".receiver.CloseNoticeBroadcastReceiver"
             android:enabled="true"
