--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
         <activity android:name=".activity.TabTitleActivity"/>
         <activity android:name=".activity.ChoiceViewActivity"/>
         <activity android:name=".activity.TestActivity"/>
+        <activity android:name=".activity.TestKotlinActivity"/>
         <activity android:name=".activity.ViewFlipperActivity"/>
         <activity android:name=".activity.ViewStubActivity"/>
         <activity android:name=".activity.LocalBroadcastActivity"/>
