--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,9 @@ dependencies {
 
     implementation 'com.zhy:base-rvadapter:3.0.3'
 
-    implementation 'com.github.florent37:glidepalette:2.1.2'
+//    implementation 'com.github.florent37:glidepalette:2.1.2'
+
+    implementation 'com.android.support:palette-v7:27.0.2'
 
     implementation 'com.android.support:multidex:1.0.1'
 
