--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".activity.VoiceAnimActivity" />
         <activity android:name=".activity.CustomViewFirstActivity" />
         <activity android:name=".activity.CustomViewTwoActivity" />
+        <activity android:name=".activity.CustomViewThreeActivity"/>
         <activity android:name=".activity.UpdateActivity"/>
         <activity android:name=".activity.ContactActivity"
             android:windowSoftInputMode="adjustPan">
