--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,9 @@
 buildscript {
 
     ext.walle_version = '1.1.6'
-    ext.kotlin_version = '1.2.10'
+    ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.3'
+    ext.sdk_version = '28.0.3'
 
     // 仓库
     repositories {
@@ -16,8 +17,8 @@ buildscript {
     }
     // 依赖包
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.meituan.android.walle:plugin:1.1.3'
+        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.meituan.android.walle:plugin:1.1.6'
         classpath "com.meituan.android.walle:plugin:$walle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
