--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     // 仓库
     repositories {
         // 依次执行的
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'https://jitpack.io' }
         jcenter()
         google()
@@ -30,6 +31,7 @@ buildscript {
 // 所有的module编译过程中依赖的包，以及包的仓库
 allprojects {
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'https://jitpack.io' }
         jcenter()
         google()
