--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.walle_version = '1.1.6'
     ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.3'
+    ext.coroutines_version = '1.3.7'
     ext.sdk_version = '28.0.3'
 
     // 仓库
