--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,7 @@
             />
         <activity android:name=".activity.BaseAdapterActivity" />
         <activity android:name=".activity.KotlinActivity" />
+        <activity android:name=".datastructure.TestDataActivity" />
 
         <receiver android:name=".receiver.CloseNoticeBroadcastReceiver"
             android:enabled="true"
