[comments]： Glide submit 和 into 方法回调线程查看 [jira_id]：zhangshuai [version]：

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,7 @@
         <activity android:name=".activity.KotlinActivity" />
         <activity android:name=".datastructure.TestDataActivity" />
         <activity android:name=".activity.CustomViewFourActivity" />
+        <activity android:name=".activity.GlideActivity" />
 
         <receiver android:name=".receiver.CloseNoticeBroadcastReceiver"
             android:enabled="true"
