--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,7 @@
         <activity android:name=".activity.CustomViewFourActivity" />
         <activity android:name=".activity.GlideActivity" />
         <activity android:name=".activity.kotlin.KotlinTestActivity" />
+        <activity android:name=".activity.ViewPager2Activity" />
 
         <receiver android:name=".receiver.CloseNoticeBroadcastReceiver"
             android:enabled="true"
