--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 buildscript {
 
     ext.walle_version = '1.1.6'
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.72'
     ext.anko_version = '0.10.3'
     ext.coroutines_version = '1.3.7'
     ext.sdk_version = '28.0.3'
@@ -23,6 +23,9 @@ buildscript {
         classpath 'com.meituan.android.walle:plugin:1.1.6'
         classpath "com.meituan.android.walle:plugin:$walle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
