--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,7 @@
         <activity android:name=".activity.GlideActivity" />
         <activity android:name="com.zs.various.kotlin.KotlinTestActivity" />
         <activity android:name=".activity.ViewPager2Activity" />
+        <activity android:name=".activity.ExtendActivity" />
 
         <receiver android:name=".receiver.CloseNoticeBroadcastReceiver"
             android:enabled="true"
