[comments]： Kotlin [jira_id]：nengmao [version]：

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
 //        }
     }
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+
     signingConfigs {
         pkg {
             storeFile file("keystore/test.jks")
