--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ dependencies {
     // 美团批量打包
     implementation 'com.squareup.picasso:picasso:2.5.2'
     // 图片
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     // 图片
     implementation 'com.github.iwgang:countdownview:2.1.6'
     // 倒计时
@@ -132,6 +132,7 @@ dependencies {
 
     implementation 'cn.bingoogolapple:bga-baseadapter:2.0.0@aar'
 
+    implementation 'com.google.android:flexbox:2.0.1'
 
 }
 
